fix alert spacing

--- a/css/alert.css
+++ b/css/alert.css
@@ -24,6 +24,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+  padding-bottom: 30px;
 }
 .alert-card {
   width: 100%;
